--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ django-crispy-forms>=2.1
 crispy-bootstrap5>=0.7
 python-dateutil>=2.8.0
 djangorestframework>=3.14.0
-
+gunicorn>=21.2.0
+python-decouple>=3.8
+whitenoise>=6.5.0
